test/libsolidity/syntaxTests/using/using_free_no_parameters_struct_err.sol
struct S { uint8 x; }
function f() {}
using {f} for S;
// ----
// TypeError 4731: (45-46): The function "f" does not have any parameters, and therefore cannot be attached to the type "struct S".
